test/cases/parser/WrongImport2.errors
src/WrongImport2.b:4:18: Syntax error (expected name)
