test/cases/parser/WrongImport2.b
module WrongImport2
interface { }

import qualified 123782364;
